white space fixed

--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@ body {
   box-shadow: 0 8px 22px 0 rgba(31, 38, 135, 0.247);
   backdrop-filter: blur(3.5px);
   border-radius: 15px;
+  margin-bottom: 85px;
 }
 
 .icon {
